fixes nowrap attribute/class

--- a/app/css/screen.less
+++ b/app/css/screen.less
@@ -82,10 +82,6 @@ body, h1, h2, p {
     margin-bottom: 50px;
 }
 
-.clean-break, .no-wrap { 
-    white-space: nowrap;
-}
-
 @media only screen and (min-width: 768px) and (max-width: 959px) {
     .clean-break { display: block; }
 }
